# face-detection-game-OpenCV

./: CMakeLists.txt  README.md  faceTrack.cpp  game.cpp  game.h  handTrack.cpp  main.cpp
